[tool.poetry]
name = "dimanaux_brain_games"
version = "0.1.0"
description = ""
authors = ["Dmitry Barskov <barskoidim@gmail.com>"]
packages = [
    { include = "brain_games" },
]

[tool.poetry.dependencies]
python = "^3.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
dimanaux-brain-games = "brain_games.scripts.brain_games:main"

